// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<More /> should render as expected when the user is logged in 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(More)>
    <More
      isLoggedIn={true}
      logout={[Function]}
      user={
        {
          "firstName": "John",
          "lastName": "Appleseed",
        }
      }
    >
      <MockedView
        aria-hidden={false}
      >
        <div>
          <BackBar
            right={null}
          >
            <div />
          </BackBar>
          <Headline
            style={
              {
                "margin": "24px 20px 16px",
              }
            }
            tag="h1"
            text="navigation.welcome_message"
          >
            <h1
              className="sg-1e76cvh-root headline theme__headline"
              data-test-id="Headline"
              style={
                {
                  "margin": "24px 20px 16px",
                }
              }
            >
              <Text
                acceptPlainTextWithPlaceholders={false}
                className={null}
                params={{}}
                role={null}
                string="navigation.welcome_message"
                transform={null}
              >
                navigation.welcome_message
              </Text>
            </h1>
          </Headline>
          <Portal
            name="nav-menu.content.before"
            props={
              {
                "Headline": [Function],
                "Item": [Function],
                "Section": [Function],
              }
            }
          />
          <UserMenu
            entries={null}
            isLoggedIn={true}
            logout={[Function]}
            user={
              {
                "firstName": "John",
                "lastName": "Appleseed",
              }
            }
          >
            <Portal
              name="user-menu.container.before"
              props={
                {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": true,
                  "logout": [Function],
                  "user": {
                    "firstName": "John",
                    "lastName": "Appleseed",
                  },
                }
              }
            />
            <Portal
              name="user-menu.container"
              props={
                {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": true,
                  "logout": [Function],
                  "user": {
                    "firstName": "John",
                    "lastName": "Appleseed",
                  },
                }
              }
            >
              <LoggedIn
                logout={[Function]}
              >
                <SurroundPortals
                  portalName="nav-menu.my-account"
                  portalProps={
                    {
                      "Item": [Function],
                    }
                  }
                >
                  <div
                    data-test-id="userMenu"
                  >
                    <Section
                      title="navigation.your_account"
                    >
                      <Headline
                        style={
                          {
                            "margin": "24px 20px 16px",
                          }
                        }
                        tag="h2"
                        text="navigation.your_account"
                      >
                        <h2
                          className="sg-1e76cvh-root headline theme__headline"
                          data-test-id="Headline"
                          style={
                            {
                              "margin": "24px 20px 16px",
                            }
                          }
                        >
                          <Text
                            acceptPlainTextWithPlaceholders={false}
                            className={null}
                            params={{}}
                            role={null}
                            string="navigation.your_account"
                            transform={null}
                          >
                            navigation.your_account
                          </Text>
                        </h2>
                      </Headline>
                      <div
                        className="sg-1sqpupb-list"
                        data-test-id="more-section-list"
                      >
                        <SurroundPortals
                          portalName="nav-menu.logout"
                          portalProps={
                            {
                              "Item": [Function],
                            }
                          }
                        >
                          <MoreMenuItem
                            className={null}
                            href={null}
                            label="navigation.logout"
                            onClick={[Function]}
                            testId="logoutButton"
                          >
                            <button
                              className="sg-xorol2-root"
                              data-test-id="logoutButton"
                              onClick={[Function]}
                              type="button"
                            >
                              <Text
                                acceptPlainTextWithPlaceholders={false}
                                className={null}
                                params={{}}
                                role={null}
                                string="navigation.logout"
                                transform={null}
                              >
                                navigation.logout
                              </Text>
                            </button>
                          </MoreMenuItem>
                        </SurroundPortals>
                      </div>
                    </Section>
                  </div>
                </SurroundPortals>
              </LoggedIn>
            </Portal>
            <Portal
              name="user-menu.container.after"
              props={
                {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": true,
                  "logout": [Function],
                  "user": {
                    "firstName": "John",
                    "lastName": "Appleseed",
                  },
                }
              }
            />
          </UserMenu>
          <Quicklinks>
            <div />
          </Quicklinks>
          <StoreInfo>
            <Portal
              name="nav-menu.store-information.before"
              props={
                {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            />
            <Portal
              name="nav-menu.store-information"
              props={
                {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            >
              <Section
                title="navigation.store_information"
              >
                <Headline
                  style={
                    {
                      "margin": "24px 20px 16px",
                    }
                  }
                  tag="h2"
                  text="navigation.store_information"
                >
                  <h2
                    className="sg-1e76cvh-root headline theme__headline"
                    data-test-id="Headline"
                    style={
                      {
                        "margin": "24px 20px 16px",
                      }
                    }
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="navigation.store_information"
                      transform={null}
                    >
                      navigation.store_information
                    </Text>
                  </h2>
                </Headline>
                <div
                  className="sg-1sqpupb-list"
                  data-test-id="more-section-list"
                >
                  <Shipping>
                    <Portal
                      name="nav-menu.shipping.before"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.shipping"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/shipping"
                        label="navigation.shipping"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="sg-xorol2-root"
                          href="/page/shipping"
                          role="button"
                        >
                          <Text
                            acceptPlainTextWithPlaceholders={false}
                            className={null}
                            params={{}}
                            role={null}
                            string="navigation.shipping"
                            transform={null}
                          >
                            navigation.shipping
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.shipping.after"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Shipping>
                  <Payment>
                    <Portal
                      name="nav-menu.payment.before"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.payment"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/payment"
                        label="navigation.payment"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="sg-xorol2-root"
                          href="/page/payment"
                          role="button"
                        >
                          <Text
                            acceptPlainTextWithPlaceholders={false}
                            className={null}
                            params={{}}
                            role={null}
                            string="navigation.payment"
                            transform={null}
                          >
                            navigation.payment
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.payment.after"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Payment>
                  <Terms>
                    <Portal
                      name="nav-menu.terms.before"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.terms"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/terms"
                        label="navigation.terms"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="sg-xorol2-root"
                          href="/page/terms"
                          role="button"
                        >
                          <Text
                            acceptPlainTextWithPlaceholders={false}
                            className={null}
                            params={{}}
                            role={null}
                            string="navigation.terms"
                            transform={null}
                          >
                            navigation.terms
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.terms.after"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Terms>
                  <Privacy>
                    <Portal
                      name="nav-menu.privacy.before"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.privacy"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/privacy"
                        label="navigation.privacy"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="sg-xorol2-root"
                          href="/page/privacy"
                          role="button"
                        >
                          <Text
                            acceptPlainTextWithPlaceholders={false}
                            className={null}
                            params={{}}
                            role={null}
                            string="navigation.privacy"
                            transform={null}
                          >
                            navigation.privacy
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.privacy.after"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Privacy>
                  <ReturnPolicy>
                    <Portal
                      name="nav-menu.return-policy.before"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.return-policy.after"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </ReturnPolicy>
                  <Imprint>
                    <Portal
                      name="nav-menu.imprint.before"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.imprint"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/imprint"
                        label="navigation.about"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="sg-xorol2-root"
                          href="/page/imprint"
                          role="button"
                        >
                          <Text
                            acceptPlainTextWithPlaceholders={false}
                            className={null}
                            params={{}}
                            role={null}
                            string="navigation.about"
                            transform={null}
                          >
                            navigation.about
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.imprint.after"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Imprint>
                </div>
              </Section>
            </Portal>
            <Portal
              name="nav-menu.store-information.after"
              props={
                {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            />
          </StoreInfo>
          <Portal
            name="nav-menu.content.after"
            props={
              {
                "Headline": [Function],
                "Item": [Function],
                "Section": [Function],
              }
            }
          />
          <ClientInformation>
            <div />
          </ClientInformation>
        </div>
      </MockedView>
    </More>
  </Connect(More)>
</Provider>
`;

exports[`<More /> should render as expected when the user is not logged in 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(More)>
    <More
      isLoggedIn={false}
      logout={[Function]}
      user={null}
    >
      <MockedView
        aria-hidden={false}
      >
        <div>
          <BackBar
            right={null}
          >
            <div />
          </BackBar>
          <Headline
            style={
              {
                "margin": "24px 20px 16px",
              }
            }
            tag="h1"
            text="login.headline"
          >
            <h1
              className="sg-1e76cvh-root headline theme__headline"
              data-test-id="Headline"
              style={
                {
                  "margin": "24px 20px 16px",
                }
              }
            >
              <Text
                acceptPlainTextWithPlaceholders={false}
                className={null}
                params={{}}
                role={null}
                string="login.headline"
                transform={null}
              >
                login.headline
              </Text>
            </h1>
          </Headline>
          <UserMenu
            entries={null}
            isLoggedIn={false}
            logout={[Function]}
            user={null}
          >
            <Portal
              name="user-menu.container.before"
              props={
                {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": false,
                  "logout": [Function],
                  "user": null,
                }
              }
            />
            <Portal
              name="user-menu.container"
              props={
                {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": false,
                  "logout": [Function],
                  "user": null,
                }
              }
            >
              <Connect(LoggedOut)>
                <LoggedOut
                  dispatch={[Function]}
                  isDisabled={false}
                >
                  <div
                    data-test-id="userMenu"
                  >
                    <Grid
                      className="sg-mxubgw-grid theme__more-page__user-menu__container"
                    >
                      <Grid.Item
                        className="sg-u59bcx-gridItem theme__more-page__login-button__container"
                      >
                        <Link
                          disabled={false}
                          href="/login"
                          tabIndex={0}
                        >
                          <Button
                            className="sg-sv9uio-button theme__more-page__login-button"
                            disabled={false}
                            testId="UserMenuLogin"
                            type="secondary"
                          >
                            <Text
                              acceptPlainTextWithPlaceholders={false}
                              className={null}
                              params={{}}
                              role={null}
                              string="login.button"
                              transform={null}
                            >
                              login.button
                            </Text>
                          </Button>
                        </Link>
                      </Grid.Item>
                      <Grid.Item
                        className="sg-u59bcx-gridItem theme__more-page-register-button__container"
                      >
                        <Link
                          disabled={false}
                          href="/register"
                          tabIndex={0}
                        >
                          <Button
                            className="sg-sv9uio-button theme__more-page-register-button"
                            disabled={false}
                            testId="UserMenuRegister"
                            type="secondary"
                          >
                            <Text
                              acceptPlainTextWithPlaceholders={false}
                              className={null}
                              params={{}}
                              role={null}
                              string="login.signup"
                              transform={null}
                            >
                              login.signup
                            </Text>
                          </Button>
                        </Link>
                      </Grid.Item>
                    </Grid>
                  </div>
                </LoggedOut>
              </Connect(LoggedOut)>
            </Portal>
            <Portal
              name="user-menu.container.after"
              props={
                {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": false,
                  "logout": [Function],
                  "user": null,
                }
              }
            />
          </UserMenu>
          <Portal
            name="nav-menu.content.before"
            props={
              {
                "Headline": [Function],
                "Item": [Function],
                "Section": [Function],
              }
            }
          />
          <Quicklinks>
            <div />
          </Quicklinks>
          <StoreInfo>
            <Portal
              name="nav-menu.store-information.before"
              props={
                {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            />
            <Portal
              name="nav-menu.store-information"
              props={
                {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            >
              <Section
                title="navigation.store_information"
              >
                <Headline
                  style={
                    {
                      "margin": "24px 20px 16px",
                    }
                  }
                  tag="h2"
                  text="navigation.store_information"
                >
                  <h2
                    className="sg-1e76cvh-root headline theme__headline"
                    data-test-id="Headline"
                    style={
                      {
                        "margin": "24px 20px 16px",
                      }
                    }
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="navigation.store_information"
                      transform={null}
                    >
                      navigation.store_information
                    </Text>
                  </h2>
                </Headline>
                <div
                  className="sg-1sqpupb-list"
                  data-test-id="more-section-list"
                >
                  <Shipping>
                    <Portal
                      name="nav-menu.shipping.before"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.shipping"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/shipping"
                        label="navigation.shipping"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="sg-xorol2-root"
                          href="/page/shipping"
                          role="button"
                        >
                          <Text
                            acceptPlainTextWithPlaceholders={false}
                            className={null}
                            params={{}}
                            role={null}
                            string="navigation.shipping"
                            transform={null}
                          >
                            navigation.shipping
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.shipping.after"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Shipping>
                  <Payment>
                    <Portal
                      name="nav-menu.payment.before"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.payment"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/payment"
                        label="navigation.payment"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="sg-xorol2-root"
                          href="/page/payment"
                          role="button"
                        >
                          <Text
                            acceptPlainTextWithPlaceholders={false}
                            className={null}
                            params={{}}
                            role={null}
                            string="navigation.payment"
                            transform={null}
                          >
                            navigation.payment
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.payment.after"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Payment>
                  <Terms>
                    <Portal
                      name="nav-menu.terms.before"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.terms"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/terms"
                        label="navigation.terms"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="sg-xorol2-root"
                          href="/page/terms"
                          role="button"
                        >
                          <Text
                            acceptPlainTextWithPlaceholders={false}
                            className={null}
                            params={{}}
                            role={null}
                            string="navigation.terms"
                            transform={null}
                          >
                            navigation.terms
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.terms.after"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Terms>
                  <Privacy>
                    <Portal
                      name="nav-menu.privacy.before"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.privacy"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/privacy"
                        label="navigation.privacy"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="sg-xorol2-root"
                          href="/page/privacy"
                          role="button"
                        >
                          <Text
                            acceptPlainTextWithPlaceholders={false}
                            className={null}
                            params={{}}
                            role={null}
                            string="navigation.privacy"
                            transform={null}
                          >
                            navigation.privacy
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.privacy.after"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Privacy>
                  <ReturnPolicy>
                    <Portal
                      name="nav-menu.return-policy.before"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.return-policy.after"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </ReturnPolicy>
                  <Imprint>
                    <Portal
                      name="nav-menu.imprint.before"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.imprint"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/imprint"
                        label="navigation.about"
                        onClick={null}
                        testId={null}
                      >
                        <Link
                          className="sg-xorol2-root"
                          href="/page/imprint"
                          role="button"
                        >
                          <Text
                            acceptPlainTextWithPlaceholders={false}
                            className={null}
                            params={{}}
                            role={null}
                            string="navigation.about"
                            transform={null}
                          >
                            navigation.about
                          </Text>
                        </Link>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.imprint.after"
                      props={
                        {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Imprint>
                </div>
              </Section>
            </Portal>
            <Portal
              name="nav-menu.store-information.after"
              props={
                {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            />
          </StoreInfo>
          <Portal
            name="nav-menu.content.after"
            props={
              {
                "Headline": [Function],
                "Item": [Function],
                "Section": [Function],
              }
            }
          />
          <ClientInformation>
            <div />
          </ClientInformation>
        </div>
      </MockedView>
    </More>
  </Connect(More)>
</Provider>
`;
